--- a/manifest.json
+++ b/manifest.json
@@ -604,6 +604,30 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/techguides/access-fcm-ud-directories.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/access-fcm-ud-directories.html",
+          "hash": "NNRbQf/dh43jr5BRsktb3w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/access-t24-ud-directories.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/access-t24-ud-directories.html",
+          "hash": "J16SK01KyUdtYDhSJ0NAmg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/techguides/access-ud-directories.md",
       "output": {
         ".html": {
@@ -615,15 +639,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/add-app-endpoint.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/add-app-endpoint.html",
-          "hash": "Z0kgyno0xbqMr+Zxs2NLog=="
+          "hash": "IWvsFb++TsaZqimWUCqseg=="
         }
       },
       "is_incremental": false,
@@ -785,7 +806,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fcm-configuration.html",
-          "hash": "y8k3D4z5Y1jndbHLi4mz0w=="
+          "hash": "CfYvuTF75J3S6wL2qfMmHQ=="
         }
       },
       "is_incremental": false,
@@ -5748,14 +5769,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
