--- a/manifest.json
+++ b/manifest.json
@@ -777,12 +777,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/factories.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/factories.html",
-          "hash": "G+IzuZ2aedNsgswbC3Z9bw=="
+          "hash": "jcbSOKeKuX/JU1cwlyUieA=="
         }
       },
       "is_incremental": false,
@@ -2827,17 +2830,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/factory-scheduler.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/factory-scheduler.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/techguides/images/factory_details.png",
       "output": {
         "resource": {
@@ -2853,6 +2845,39 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/factory_product_configuration.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/factory_promotion_configuration.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/factory_promotion_configuration.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/factory_scheduler.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/factory_scheduler.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/factory_test_configuration.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/factory_test_configuration.png"
         }
       },
       "is_incremental": false,
@@ -5782,14 +5807,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
