--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -10,13 +10,12 @@
 - name: Extend
   href: ./extend.md
   items:
-   - name: How to... 
-     href: ./how-to-extend.md
+   - name: Create users
+     href: ./user-creation-in-paas.md 
+     items: 
+   - name: Manage environments
+     href: ./manage-environments.md
      items:
-       - name: Create users
-         href: ./techguides/user-creation-in-paas.md  
-       - name: Manage environments
-         href: ./techguides/manage-environments.md
        - name: Perform Environment Basic Operations
          href: ./techguides/environment-basic-operations.md
        - name: Deploy an update to an existing environment
